kube-2023-06-14/ingress.networking.k8s.io/acm-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    haproxy.org/ssl-redirect: "true"
    kubernetes.io/ingress.class: haproxy
  creationTimestamp: "2022-01-04T23:41:14Z"
  generation: 8
  name: acm-ingress
  namespace: default
  resourceVersion: "120989494"
  uid: 2980cc85-1ab7-4b06-9a42-0433f077fce4
spec:
  rules:
  - host: acm.awing.vn
    http:
      paths:
      - backend:
          service:
            name: acm-web-svc
            port:
              number: 80
        path: /
        pathType: Prefix
  - host: acm.awing.vn
    http:
      paths:
      - backend:
          service:
            name: acm-api-svc
            port:
              number: 80
        path: /api/
        pathType: Prefix
  tls:
  - hosts:
    - acm.awing.vn
    secretName: awingtls
status:
  loadBalancer: {}
