kube-2023-06-14/ingress.networking.k8s.io/acmid-admin-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    haproxy.org/cookie-persistence: ingresscookie
    haproxy.org/ssl-redirect: "true"
    kubernetes.io/ingress.class: haproxy
  creationTimestamp: "2022-01-04T23:41:49Z"
  generation: 7
  name: acmid-admin-ingress
  namespace: default
  resourceVersion: "120989498"
  uid: b30ce96d-ac7b-4d2f-8171-3622cde90a41
spec:
  rules:
  - host: acm-admin.awing.vn
    http:
      paths:
      - backend:
          service:
            name: acmadmin-web-svc
            port:
              number: 80
        path: /
        pathType: Prefix
  - host: acm-admin.awing.vn
    http:
      paths:
      - backend:
          service:
            name: acmadmin-api-svc
            port:
              number: 80
        path: /api/
        pathType: Prefix
  tls:
  - hosts:
    - acm-admin.awing.vn
    secretName: awingtls
status:
  loadBalancer: {}
