kube-2023-06-14/ingress.networking.k8s.io/acmid-web-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    haproxy.org/ssl-redirect: "true"
    kubernetes.io/ingress.class: haproxy
  creationTimestamp: "2022-12-19T10:24:27Z"
  generation: 3
  name: acmid-web-ingress
  namespace: default
  resourceVersion: "120989499"
  uid: edc32e8d-56d2-46db-93a7-078a5900d4a6
spec:
  rules:
  - host: id.awing.vn
    http:
      paths:
      - backend:
          service:
            name: acmid-web-svc
            port:
              number: 80
        path: /
        pathType: Prefix
  - host: id.awing.vn
    http:
      paths:
      - backend:
          service:
            name: acmid-api-svc
            port:
              number: 80
        path: /api/
        pathType: Prefix
  tls:
  - hosts:
    - id.awing.vn
    secretName: awingtls
status:
  loadBalancer: {}
