kube-2023-06-14/ingress.networking.k8s.io/axn-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    haproxy.org/ssl-redirect: "true"
    kubernetes.io/ingress.class: haproxy
  creationTimestamp: "2022-01-04T23:41:33Z"
  generation: 4
  name: axn-ingress
  namespace: default
  resourceVersion: "120989501"
  uid: 4af0bda1-8a64-40cd-9459-06f2be0afad4
spec:
  rules:
  - host: acm-exchange.awing.vn
    http:
      paths:
      - backend:
          service:
            name: axn-web-svc
            port:
              number: 80
        path: /
        pathType: Prefix
  - host: acm-exchange.awing.vn
    http:
      paths:
      - backend:
          service:
            name: axn-api-svc
            port:
              number: 80
        path: /api/
        pathType: Prefix
  tls:
  - hosts:
    - acm-exchange.awing.vn
    secretName: awingtls
status:
  loadBalancer: {}
