kube-2023-06-14/ingress.networking.k8s.io/connect-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    haproxy.org/cookie-persistence: ingresscookie
    haproxy.org/forwarded-for: "true"
    haproxy.org/ssl-redirect: "false"
    kubernetes.io/ingress.class: haproxy
  creationTimestamp: "2022-01-04T23:33:53Z"
  generation: 12
  name: connect-ingress
  namespace: default
  resourceVersion: "120990196"
  uid: 6c659765-e2dd-45e3-8b27-acc3574cbdbf
spec:
  rules:
  - host: connect.awing.vn
    http:
      paths:
      - backend:
          service:
            name: acmcaptive-web-svc
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - connect.awing.vn
    secretName: awingtls
status:
  loadBalancer:
    ingress:
    - ip: 10.99.249.54
