kube-2023-06-14/ingress.networking.k8s.io/deeplink-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    haproxy.org/ssl-redirect: "true"
    kubernetes.io/ingress.class: haproxy
  creationTimestamp: "2022-01-13T10:20:33Z"
  generation: 2
  name: deeplink-ingress
  namespace: default
  resourceVersion: "120989495"
  uid: 39e25bc2-12d4-4951-92e0-38f77a571c44
spec:
  rules:
  - host: deeplink.awing.vn
    http:
      paths:
      - backend:
          service:
            name: deeplink-web-svc
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - deeplink.awing.vn
    secretName: awingtls
status:
  loadBalancer: {}
